# urazr

./: CMakeLists.txt  Makefile  main.c  test.sh
include/: urazr.h
lib/: urazr.c
